Ajout de la page profile qui permet de modifier l'username ainsi que l'email on pourra également accéder au images utilisé + ajout du composant FileInput qui permet d'ajouter une image ainsi que la liaison avec l'api de remove.bg

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:root@localhost:5432/CutOut?schema=public"
+
+NEXTAUTH_SECRET="MAzXK+Dll2Wzp6jE9U5AlOrMwqj+qheoA4K0mTVvaNI="
