--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.15.0",
     "bcrypt": "^5.1.1",
+    "flowbite-react": "^0.9.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
