--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@prisma/client": "^5.15.0",
+    "@types/formidable": "^3.4.5",
+    "@types/node-fetch": "^2.6.11",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "flowbite-react": "^0.9.0",
+    "formidable": "^3.5.1",
+    "lodash": "^4.17.21",
+    "mime": "^4.0.3",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/lodash": "^4.17.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
